--- a/composer.json
+++ b/composer.json
@@ -58,5 +58,11 @@
         "sort-packages": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": [
+        {
+        "type": "path",
+        "url": "C:/xampp/htdocs/Package/laravel-test-package-development/packages/*"
+        }
+    ]
 }
